SDKs/collegefootballdata.com/4.4.12/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install git+https://github.com/speakeasy-api/openapi-directory.git#subdirectory=SDKs/collegefootballdata.com/4.4.12/python
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK(
    security=shared.Security(
        api_key_auth="YOUR_API_KEY_HERE",
    ),
)


req = operations.GetLinesRequest(
    away="corrupti",
    conference="provident",
    game_id=715190,
    home="quibusdam",
    season_type="unde",
    team="nulla",
    week=544883,
    year=847252,
)
    
res = s.betting.get_lines(req)

if res.game_lines is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## Available Resources and Operations


### betting

* `get_lines` - Betting lines

### coaches

* `get_coaches` - Coaching records and history

### conferences

* `get_conferences` - Conferences

### draft

* `get_draft_picks` - List of NFL Draft picks
* `get_nfl_positions` - List of NFL positions
* `get_nfl_teams` - List of NFL teams

### drives

* `get_drives` - Drive data and results

### games

* `get_advanced_box_score` - Advanced box scores
* `get_calendar` - Season calendar
* `get_game_media` - Game media information and schedules
* `get_game_weather` - Game weather information (Patreon only)
* `get_games` - Games and results
* `get_player_game_stats` - Player game stats
* `get_scoreboard` - Live game results (Patreon only)
* `get_team_game_stats` - Team game stats
* `get_team_records` - Team records

### metrics

* `get_game_ppa` - Team Predicated Points Added (PPA/EPA) by game
* `get_player_game_ppa` - Player Predicated Points Added (PPA/EPA) broken down by game
* `get_player_season_ppa` - Player Predicated Points Added (PPA/EPA) broken down by season
* `get_predicted_points` - Predicted Points (i.e. Expected Points or EP)
* `get_pregame_win_probabilities` - Pregame win probability data
* `get_team_ppa` - Predicted Points Added (PPA/EPA) data by team
* `get_win_probability_data` - Win probability chart data

### players

* `get_player_season_stats` - Player stats by season
* `get_player_usage` - Player usage metrics broken down by season
* `get_returning_production` - Team returning production metrics
* `get_transfer_portal` - Transfer portal by season
* `player_search` - Search for player information

### plays

* `get_live_plays` - Live metrics and PBP (Patreon only)
* `get_play_stat_types` - Types of player play stats
* `get_play_stats` - Play stats by play
* `get_play_types` - Play types
* `get_plays` - Play by play data

### rankings

* `get_rankings` - Historical polls and rankings

### ratings

* `get_conference_sp_ratings` - Historical SP+ ratings by conference
* `get_elo_ratings` - Historical Elo ratings
* `get_sp_ratings` - Historical SP+ ratings
* `get_srs_ratings` - Historical SRS ratings

### recruiting

* `get_recruiting_groups` - Recruit position group ratings
* `get_recruiting_players` - Player recruiting ratings and rankings
* `get_recruiting_teams` - Team recruiting rankings and ratings

### stats

* `get_advanced_team_game_stats` - Advanced team metrics by game
* `get_advanced_team_season_stats` - Advanced team metrics by season
* `get_stat_categories` - Team stat categories
* `get_team_season_stats` - Team statistics by season

### teams

* `get_fbs_teams` - FBS team list
* `get_roster` - Team rosters
* `get_talent` - Team talent composite rankings
* `get_team_matchup` - Team matchup history
* `get_teams` - Team information

### venues

* `get_venues` - Arena and venue information
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta, and there may be breaking changes between versions without a major version update. Therefore, we recommend pinning usage
to a specific package version. This way, you can install the same version each time without breaking changes unless you are intentionally
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated programmatically.
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
